argocd/plausible-app/00-StatefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plausible-db
  namespace: plausible
spec:
  serviceName: "plausible-db"
  replicas: 1
  selector:
    matchLabels:
      app: plausible-db
  template:
    metadata:
      labels:
        app: plausible-db
    spec:
      containers:
      - name: plausible-db
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
