argocd/plausible-app/01-StatefulSet.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plausible-events-db
  namespace: plausible
spec:
  serviceName: "plausible-events-db"
  replicas: 1
  selector:
    matchLabels:
      app: plausible-events-db
  template:
    metadata:
      labels:
        app: plausible-events-db
    spec:
      containers:
      - name: plausible-events-db
        image: clickhouse/clickhouse-server:24.3.3.102-alpine
        ports:
        - containerPort: 8123
        - containerPort: 9000
        volumeMounts:
        - name: event-data
          mountPath: /var/lib/clickhouse
        - name: event-logs
          mountPath: /var/log/clickhouse-server
        - name: config-volume
          mountPath: /etc/clickhouse-server/config.d/logs.xml
  volumeClaimTemplates:
  - metadata:
      name: event-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
  - metadata:
      name: event-logs
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 512Mi
