argocd/plausible-app/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible
  namespace: plausible
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plausible
  template:
    metadata:
      labels:
        app: plausible
    spec:
      containers:
      - name: plausible
        image: ghcr.io/plausible/community-edition:v2.1.4
        ports:
        - containerPort: 8000
        command:
        - sh
        - -c
        - |
          /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh run
        volumeMounts:
        - name: plausible-data
          mountPath: /var/lib/plausible
      volumes:
      - name: plausible-data
        emptyDir: {}
