argocd/plausible-app/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: plausible-db-service
  namespace: plausible
spec:
  selector:
    app: plausible-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
