argocd/plausible-app/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: plausible-events-db-service
  namespace: plausible
spec:
  selector:
    app: plausible-events-db
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123
  - protocol: TCP
    port: 9000
    targetPort: 9000
