argocd/plausible-app/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: plausible-service
  namespace: plausible
spec:
  selector:
    app: plausible
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
