argocd/plausible-app/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plausible-ingress
  namespace: plausible
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - plausible.bacherik.de
    secretName: plausible-tls
  rules:
  - host: "plausible.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plausible-service
            port:
              number: 8000
